--- a/css/style.css
+++ b/css/style.css
@@ -215,3 +215,9 @@ ul {
 li {
     display: inline-block;
 }
+
+@media screen and (max-width:400px) {
+           .content {
+               width: 50%;
+           }
+       }
