--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 
 .content {
-    width: 35%;
+    width: 50%;
     margin: 0 auto;
     border: 2px solid var(--fontColor);
     margin-top: 5%;
@@ -121,7 +121,7 @@ body {
     display: flex;
     justify-content: center;
     font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .theme-button {
@@ -140,6 +140,7 @@ body {
     left: 0;
     width: 20px;
     height: 100%;
+    border: 1px solid;
     border-radius: 50%;
     background-color: #ffffff;
     transition: left 0.5s;
@@ -184,20 +185,20 @@ width: fit-content; */
     font-weight: 500;
     font-style: oblique;
     color: var(--fontColor);
-    bottom: 30px;
+    bottom: 20px;
     position: absolute;
     text-align: center;
 }
 
 .github-link {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     border-radius: 50px;
 }
 
 .linkedin-link {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     border-radius: 50px;
 }
 
@@ -215,8 +216,43 @@ li {
     margin: 0 auto;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 461px) {
     .content {
-        width: 50%;
+        width: 60%;
     }
+}
+
+@media screen and (max-width: 384px) {
+    .content {
+        width: 70%;
+    }
+}
+
+.main-content {
+    margin: 0 auto;
+    text-align: center;
+    height: 100%;
+    width: 70%;
+    background: none repeat scroll 0 0 var(--bgColor);
+    position: relative;
+}
+
+.main-content:before {
+    box-shadow: -20px 0 20px -20px var(--fontColor) inset;
+    content: " ";
+    height: 100%;
+    left: -20px;
+    position: absolute;
+    top: 0;
+    width: 20px;
+}
+
+.main-content:after {
+    box-shadow: 20px 0 20px -20px var(--fontColor) inset;
+    content: " ";
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: -20px;
+    width: 20px;
 }
