--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,8 @@ html,
 body {
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -195,7 +197,7 @@ width: fit-content; */
     font-weight: 500;
     font-style: oblique;
     color: var(--fontColor);
-    bottom: 0px;
+    bottom: 15px;
     position: absolute;
     text-align: center;
     line-height: 25px;
