--- a/css/style.css
+++ b/css/style.css
@@ -101,20 +101,29 @@ body {
 }
 
 body {
-    background: linear-gradient(-45deg, #504949, #4b4646, #706969, #5a5252);
+    background: linear-gradient(-45deg, #af13ce, #35e1ff, #ff00d9, #21d3ff);
     background-size: 400% 400%;
-    animation: gradient 15s infinite;
+    animation: gradient 15s ease infinite;
 }
 
 @keyframes gradient {
     0% {
-        background-position: 0% 50%;
+        background-position: 0% 20%;
     }
-    50% {
-        background-position: 100% 50%;
+    20% {
+        background-position: 40% 60%;
+    }
+    40% {
+        background-position: 80% 100%;
+    }
+    60% {
+        background-position: 80% 60%;
+    }
+    80% {
+        background-position: 40% 20%;
     }
     100% {
-        background-position: 0% 50%;
+        background-position: 0% 20%;
     }
 }
 
@@ -246,7 +255,7 @@ li {
 .main-content {
     margin: 0 auto;
     text-align: center;
-    width: 70%;
+    width: 80%;
     background: none repeat scroll 0 0 var(--bgColor);
     position: relative;
     height: 100%;
