--- a/css/style.css
+++ b/css/style.css
@@ -77,25 +77,9 @@ html,
 body {
     width: 100%;
     height: 100%;
+    background-color: var(--bgColor);
 }
 
-body {
-    background: linear-gradient(-45deg, #fc00ff, #00dbde);
-    background-size: 400% 400%;
-    animation: gradient 8s ease infinite;
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
 
 .theme-button {
     position: relative;
